--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
 		"node": "^10.0.0 || ^12.0.0"
 	},
 	"dependencies": {
-		"@sap/approuter": "9.0.1"
+		"@sap/approuter": "^9.1"
 	},
 	"devDependencies": {
 		"@sap/html5-repo-mock": "2.0.1"
