--- a/app/xs-app.json
+++ b/app/xs-app.json
@@ -1,10 +1,21 @@
 {
-    "authenticationMethod": "none",
+    "authenticationMethod": "route",
     "routes": [
         {
             "source": "/catalog/(.*)",
             "destination": "srv-api",
-            "csrfProtection": true
+            "csrfProtection": true,
+            "authenticationType": "xsuaa"
+        },
+        {
+            "source": "^/user-api(.*)",
+            "target": "$1",
+            "service": "sap-approuter-userapi"
+        },
+        {
+            "source": "/(.*)",
+            "localDir": ".",
+            "authenticationType": "xsuaa"
         }
     ]
 }
