--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "license": "UNLICENSED",
     "private": true,
     "dependencies": {
+        "@sap/audit-logging": "^5.0.0",
         "@sap/cds": "^4",
+        "@sap/hana-client": "^2.6.61",
+        "@sap/xsenv": "^3.1.0",
+        "@sap/xssec": "^3.1.2",
         "express": "^4",
-        "@sap/hana-client": "^2.6.61"
+        "passport": "^0.4.1"
     },
     "devDependencies": {
         "sqlite3": "5.0.0"
     },
     "scripts": {
-        "start": "cds run"
+        "start": "NODE_ENV=production cds run"
     },
     "cds": {
         "build": {
@@ -26,7 +30,13 @@
         "requires": {
             "db": {
                 "kind": "hana"
+            },
+            "uaa": {
+                "kind": "xsuaa"
             }
         }
-    }
+    },
+    "sapux": [
+        "app/project1"
+    ]
 }
